# github-issue-analytics

./: .gitignore  CONTRIBUTING.md  README.md  add_voiceover.ps1  add_voiceover_v2.ps1  linkedin-post-v2.md  linkedin-post.md  linkedin_post_v2.md  pyproject.toml  record_demo.py  record_demo_v2.py
.github/workflows/: ci.yml
docs/: index.html  v2-demo.html
examples/: config.yaml
src/github_issue_analytics/: __init__.py  analyzer.py  cli.py  config.py  dashboard.py  etl.py  funnel.py  heatmap.py  metrics.py  reporter.py  trends.py
tests/: test_core.py
